--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Louie - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Кто я?</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -70,7 +70,7 @@
 								<span class="subheading">Приветствую тебя</span>
 								<h1 class="big-letter">Олег Пазний</h1>
 								<h1 class="mb-4"><span>Меня зовут Олег</span></h1>
-								<p class="mb-4">Я фотограф из Минска с искусством и профессионализмом захватывающий моменты и создающий неповторимые и вдохновляющие фотографии и видео. Запишись ко мне на съемку и мы сделаем твой инстаграм круче!</p>
+								<p class="mb-4">Я фотограф и видеограф из Минска с искусством и профессионализмом захватывающий моменты и создающий неповторимые и вдохновляющие фотографии и видео. Запишись ко мне на фотосессию и мы сделаем твой инстаграм круче!</p>
 								<h3 class="signature h1">OlegPazny</h3>
 								<ul class="ftco-social mt-3">
 		              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
