--- a/blog.html
+++ b/blog.html
@@ -142,7 +142,7 @@
 													<span><a href="single.html">Автомобили</a></span>
 												</p>
 											</div>
-											<p class="mb-4">Съемка Opel Vectra на цифровую камеру ходом.</p>
+											<p class="mb-4">Съемка Opel Vectra на цифровую беззеркальную камеру ходом. Съемка таким способом позволяет получить красивые и реалистичные ракурсы в конечном счете!</p>
 											<p><a href="#" class="btn-custom">Смотреть <span
 														class="ion-ios-arrow-forward"></span></a></p>
 										</div>
