--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/mystyle.css">
 </head>
 
 <body>
@@ -66,7 +67,7 @@
 						<div class="col-md-8 ftco-animate">
 							<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Главная</a></span>
 								<span>Блог</span></p>
-							<h1 class="bread">Добро пожаловать в блог</h1>
+							<h1 class="bread">Блог</h1>
 						</div>
 					</div>
 				</div>
