--- a/services.html
+++ b/services.html
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/mystyle.css">
 </head>
 
 <body>
@@ -66,8 +67,14 @@
 					<div class="row no-gutters slider-text justify-content-center align-items-center">
 						<div class="col-md-8 ftco-animate">
 							<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Главная</a></span>
-								<span>Услуги</span></p>
-							<h1 class="bread">Мои услуги</h1>
+								<span>Услуги</span>
+							</p>
+							<h1 class="bread">Услуги</h1>
+							<div class="gallery-info">
+								<p>На этой странице Вы можете узнать какие услуги я предоставляю для клиента.</p>
+								<br>
+								<p>Я имею немалый багаж знаний в съемке и обработке материала. Помимо этого владею обширным количеством техники: фотоаппараты Sony Alpha 6000 и Зенит EM, а также аналоговые видеокамеры Samsung и Sony. Помимо этого я имею различные объективы, штативы, приборы освещения и устройства для записи звука.</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -85,7 +92,7 @@
 								<div class="media-body p-2 mt-2">
 									<h3 class="heading mb-3">Много оборудования</h3>
 									<p>Имею во владении цифровые и пленочные фотоаппараты, кассетные видеокамеры,
-										аудиорекордеры, свет.</p>
+										аудиорекордеры, свет. Если съемка требует дополнительного оборудования, оно арендуется за счет клиента.</p>
 								</div>
 							</div>
 						</div>
@@ -98,8 +105,7 @@
 								</div>
 								<div class="media-body p-2 mt-2">
 									<h3 class="heading mb-3">Аналоговая съёмка</h3>
-									<p>Помимо цифровой фотографии я также занимаюсь аналоговой. Аналоговая съемка дала
-										мне много опыта в фотографии.</p>
+									<p>Помимо цифровой фотографии я также занимаюсь аналоговой. Данный тип съёмки нынче очень популярен, однако требует дополнительных затрат на материалы, что заранее оговаривается с заказчиком.</p>
 								</div>
 							</div>
 						</div>
@@ -127,7 +133,7 @@
 								</div>
 								<div class="media-body p-2 mt-2">
 									<h3 class="heading mb-3">Студийные съемки</h3>
-									<p>Я открыт к съёмкам на студии и интересным идеям для реализации.</p>
+									<p>Я открыт к съёмкам на студии и интересным идеям для реализации. Студийная съёмка имеет много плюсов таких как независимость от погоды и непринужденная обстановка "без лишних глаз". Вы остаетеь с фотографом один-на-один.</p>
 								</div>
 							</div>
 						</div>
@@ -154,7 +160,7 @@
 								<div class="media-body p-2 mt-2">
 									<h3 class="heading mb-3">Фокус на клиента</h3>
 									<p>Для достижения поставленной задачи необходимо полностью отдаться клиенту и
-										настроится с ним на одну волну.</p>
+										настроится с ним на одну волну. Только таким образом можно получить превосходные кадры!</p>
 								</div>
 							</div>
 						</div>
