добавлен контент в статьи

--- a/blog.html
+++ b/blog.html
@@ -68,6 +68,11 @@
 							<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Главная</a></span>
 								<span>Блог</span></p>
 							<h1 class="bread">Блог</h1>
+							<div class="gallery-info">
+								<p>Добро пожаловать на страницу блога!</p>
+								<p>Вместе с тобой я собираюсь погрузиться в мир фотографии и рассмотреть его с разных ракурсов. Здесь ты найдешь самые яркие и впечатляющие моменты моих съемок: от потрясающих пейзажей до увлекательных портретов. Не только живописные места, но и эмоциональные истории жизни людей, задумчивые портреты и яркие сюжеты - все это я пытаюсь передать через объектив своей камеры.</p>
+								<p>Моя цель - не только восхищать тебя красотой изображений, но и поделиться своими навыками и опытом. Здесь я не только показываю свои работы, но и делюсь технологиями, используемыми для создания этих фотографий. Я расскажу о правилах композиции, о том, как захватить интересные углы и использовать свет для создания запоминающихся снимков.</p>
+							</div>
 						</div>
 					</div>
 				</div>
