сео оптимизация текста

--- a/about.html
+++ b/about.html
@@ -90,10 +90,10 @@
 							<div class="desc">
 								<span class="subheading">Немного истории</span>
 								<h1 class="mb-4"><span>Как всё началось</span></h1>
-								<p class="mb-4">Мой папа еще со студенческих времен увлекался съемкой на все что попадется под руку и следовательно всё это монтировал. В подростковом возрасте я начал перенимать опыт, так как у нас уже имелась какая-то техника для съемки: экшн-камеры, стабилизаторы, "мыльницы" высокого уровня.</p>
+								<p class="mb-4">Мой папа еще со студенческих времен увлекался съемкой на все что попадется под руку и, следовательно, всё это монтировал. В подростковом возрасте я начал перенимать опыт, так как у нас уже имелась какая-то техника для съемки: экшн-камеры, стабилизаторы, "мыльницы" высокого уровня.</p>
 								<p class="mb-4">Так как техника была недешёвая - доступ к ней для меня был ограничен, но я, проявляя немалый интерес к этому, благополучно брал её без спроса и снимал материал, благодаря чему и научился в конечном итоге монтировать видео и обрабатывать фотографии в фотошопе.</p>
-								<p class="mb-4">Я снимал всё-больше и больше, пробовал для себя разное и понял, что парк "домашней" техники не удовлетворяет мои потребности. Исходя из моих потребностей я выбрал себе свою первую камеру - Sony Alpha 6000 и начал откладывать деньги на её приобретение.</p>
-								<p class="mb-4">После приобретения камеры я начал делать с ней то, для чего я её и покупал - снимать видеоролики различных форматов. Однако рынок диктует правила и к сожалению или к счастью видеоролики мало кого интересовали и я начал погружаться в фотографию. Мне под руку попадались "мануальные" объективы по типу Гелиоса, благодаря которым я очень круто "набил" себе руку.</p>
+								<p class="mb-4">Я снимал всё больше и больше, пробовал для себя разное и понял, что парк "домашней" техники не удовлетворяет мои потребности. Исходя из моих потребностей я выбрал себе свою первую камеру - Sony Alpha 6000 и начал откладывать деньги на её приобретение.</p>
+								<p class="mb-4">После приобретения камеры я начал делать с ней то, для чего я её и покупал - снимать видеоролики различных форматов. Однако рынок диктует правила, и к сожалению или к счастью, видеоролики никого интересовали и я начал погружаться в фотографию. Мне под руку попадались "мануальные" объективы по типу Гелиоса, благодаря которым я очень круто "набил" себе руку.</p>
 							</div>
 						</div>
 						<div class="author-image text img p-md-5" style="background-image: url(images/author-3.jpg);"></div>
@@ -103,9 +103,9 @@
 						<div class="author-info text p-4 p-md-5 mt-5 mb-5" style="overflow: hidden;">
 							<div class="desc">
 								<h1 class="mb-4"><span>Вхождение в аналоговый мир</span></h1>
-								<p class="mb-4">Так получилось, что поначалу я был противником плёночной фотографии, так как она быстро заполнила интернет благодаря простоте использования и дешевизны плёночных "мыльниц", а я человек с принципом "как угодно, но не как все". По воле случая в качестве подарка я однажды приобрел ту самую плёночную "мыльницу" и, одержавшись интересом начал разбираться как это всё работает и что интересного с этим можно сделать.</p>
-								<p class="mb-4">И в один из дней листая барахолку я нахожу лот, а именно пакет с плёночными зеркальными фотоаппаратами с неизвестной работоспособностью за копейки. Фотоаппараты на развес, что может быть лучше? Изучив матчасть по принципу их работы я успешно приобрел себе 6 или 7 рабочих, а иногда и нерабочих фотоаппаратов, среди которых оказался Зенит ЕМ, на который в будущем будет отснята не одна плёнка.</p>
-								<p class="mb-4">Как фотограф я могу дать совет всем новичкам, которые понимают базовые принципы фотографирования и настроек фотоаппарата - покупайте плёночную зеркальную камеру. Таким способом, методом проб и ошибок (а этот метод самый эффективный), Вы научитесь правильно пользоваться выддержкой, диафрагмой, ISO. Эта база поможет отказаться от атвоматических натсроек камеры и реализовать себя индивидуально, не так как все. Этот опыт незаменим!</p>
+								<p class="mb-4">Так получилось, что я был противником плёночной фотографии, так как она быстро заполнила интернет благодаря простоте использования и дешевизны плёночных "мыльниц", а я человек с принципом "как угодно, но не как все". По воле случая в качестве подарка я однажды приобрел ту самую плёночную "мыльницу" и, одержавшись интересом начал разбираться как это всё работает и что интересного с этим можно сделать.</p>
+								<p class="mb-4">В один из дней листая барахолку я нахожу лот: пакет с плёночными зеркальными фотоаппаратами с неизвестной работоспособностью за копейки. Фотоаппараты на развес, что может быть лучше? Изучив матчасть по принципу их работы я успешно приобретаю 6 или 7 рабочих, а иногда и нерабочих фотоаппаратов. Среди них оказался Зенит ЕМ, на который в будущем будет отснята не одна плёнка.</p>
+								<p class="mb-4">Как фотограф я могу дать совет новичкам, которые понимают базовые принципы фотографирования и настроек фотоаппарата - покупайте плёночную зеркальную камеру. Таким способом, методом проб и ошибок (а этот метод самый эффективный), Вы научитесь правильно пользоваться выдержкой, диафрагмой, ISO. Эта база поможет отказаться от автоматических настроек камеры и реализовать себя индивидуально, не так как все. Данный опыт незаменим!</p>
 							</div>
 						</div>
 					</div>
@@ -113,9 +113,9 @@
 						<div class="author-info text p-4 p-md-5 mt-5 mb-5" style="overflow: hidden;">
 							<div class="desc">
 								<h1 class="mb-4"><span>Что сейчас?</span></h1>
-								<p class="mb-4">Сейчас аналоговая съемка обретает большую популярность и чтобы следовать новым тенденциям необходимо изучать новые просторы в этой сфере. Не так давно мне попалась под руку кассетная видеокамера Samsung. Данная камера в качестве носителя для записей использует магнитные кассеты, которые дают определенные деффекты на видео, а они сегодня очень популярны в медиа индустрии.</p>
+								<p class="mb-4">Сейчас аналоговая съемка обретает большую популярность и, чтобы следовать новым тенденциям, необходимо изучать новые просторы в этой сфере. Не так давно мне попалась под руку кассетная видеокамера Samsung. Данная камера в качестве носителя для записей использует магнитные кассеты, которые дают определенные дефекты на видео, а они сегодня очень популярны в медиа индустрии.</p>
 								<p class="mb-4">Спустя некоторое время я "заимел" камеру уровнем выше, уже с ночным видением и большим простором настроек и встроенных эффектов.</p>
-								<p class="mb-4">На сегодняшний день я не останавлюваюсь на том, что умею. Я не боюсь к переменам и готов поменять вектор в своей сфере деятельности на радикально другой. Главное, чтобы это было интересно как мне, так и моим клиентам!</p>
+								<p class="mb-4">Сегодня я не останавливаюсь на том, что умею. Я не боюсь перемен и готов поменять вектор своей сферы деятельности на радикально другой. Главное, чтобы это было интересно как мне, так и моим клиентам!</p>
 							</div>
 						</div>
 						<div class="author-image text img p-md-5" style="background-image: url(images/author-5.jpg);"></div>
