--- a/blog.html
+++ b/blog.html
@@ -202,7 +202,7 @@
 													<span><a href="single.html">Автомобили</a></span>
 												</p>
 											</div>
-											<p class="mb-4">Opel Vectra C на интересной локации, а именно закрытый стадион трактор, колонны которого придают сильную динамику фотографиямю</p>
+											<p class="mb-4">Opel Vectra C на интересной локации, а именно закрытый стадион трактор, колонны которого придают сильную динамику фотографиям.</p>
 											<p><a href="#" class="btn-custom">Смотреть <span
 														class="ion-ios-arrow-forward"></span></a></p>
 										</div>
