--- a/single.html
+++ b/single.html
@@ -78,38 +78,38 @@
 						<div class="col-lg-8 ftco-animate">
 							<h2 class="mb-3 font-weight-bold">Примеры плёночных фотографий</h2>
 							<h2 class="mb-3 mt-5 font-weight-bold">Opel Vectra и ColorPlus 200</h2>
-							<p>Вы когда-нибудь задумывались какой носитель наоболее точно хранит данные о Вашей фотографии? Спешу удивить, что это самая обычная, казалось бы уже устаревшая плёнка 35 мм, которая казалось бы не имеет места на существование в современном мире, однако ее вытеснили цифровые носители информации только лишь из-за простоты процесса получения кадров и удобства использования, но речь не об этом.</p>
+							<p>Вы когда-нибудь задумывались, какой носитель наиболее точно хранит данные о Вашей фотографии? Спешу удивить, что это самая обычная, казалось бы уже устаревшая плёнка 35 мм, которая не имеет места на существование в современном мире, однако ее вытеснили цифровые носители информации только лишь из-за простоты процесса получения кадров и удобства использования.</p>
 							<p>Давайте рассмотрим и разберем несколько моих пленочных снимков автомобилей.</p>
 							<p>
 								<img src="images/blog_1.jpg" alt="" class="img-fluid">
 							</p>
-							<p>Эта фотография расскрывает в полной мере все, за что сейчас любат плёнку, а именно теплые цвета, где-то блик, где-то пересвет. Казалось бы фотография имеет деффекты, но они же и придают шарма, придают фотографии жизни и естественности.</p>
-							<p>Это фото было сделано абсолютно спонтанно во время съемки автомобиля на цифровую камеру, локация непримечательна, но погода и свет на улице круто сделали свою работу.</p>
+							<p>Эта фотография раскрывает в полной мере все, за что сейчас любят плёнку, а именно теплые цвета, блик, пересвет. Казалось бы видно дефекты, но они же и придают шарма, придают фотографии жизни и естественности.</p>
+							<p>Это фото было сделано абсолютно спонтанно во время съемки автомобиля на цифровую камеру, локация непримечательна, но погода и освещение на улице круто сделали свою работу.</p>
 							<p>В данном случае была использована плёнка Kodak ColorPlus 200, которая одновременно имеет и хорошее ненадоедливое зерно, и достаточную для таких условий светочувствительность. Тут удалось "убить двух зайцев", а именно хорошо проэкспонировать кадр без лишних шумов.</p>
-							<p>К данной плёнке мы ещё вернёмся, так как она является моим фаворитом среди всех цветных негативных плёнок.</p>
+							<p>К данной плёнке мы ещё вернёмся, так как она является моим фаворитом среди всего цветного негатива.</p>
 							<h2 class="mb-3 mt-5 font-weight-bold">BMW 3 и Portra</h2>
-							<p>Следующая фотография была сделана в не самых благоприятных для фотографии условиях: легкий туман, мало света. Однако опять же, как и в прошлом случае, всё это сыграло только на руку</p>
+							<p>Эта фотография сделана в неблагоприятных условиях: легкий туман, мало света. Как и в прошлом случае, это сыграло только на руку</p>
 							<p>
 								<img src="images/blog_2.jpg" alt="" class="img-fluid">
 							</p>
-							<p>Темный автомобиль и мрачная погода, как по мне идеальное сочетание для хорошего кадра. Однако всё могло бы быть хорошо если не один просчёт, который допускают начинающие фотографы или я, который просто поспешил и никак не поменял настройки фотоаппарата перед спуском затвора. Внимательные читатели уже заметили, что часть машины резкая, а часть вовсе нет. Всё это произошло только лишь потому что я открыл диафрагму на максимум ее диапазона, то ли для того, чтобы получить больше света, то ли забыл поменять её после прошлого кадра. Но факт остаётся фактом, для этого я и пишу об этом, чтобы разобрать свои ошибки и успехи и показать Вам как делать надо, а как лучше не стоит.</p>
-							<p>Плёнка в данном случае использовалась Kodak Portra 160, которая не подходит под такие условия от слова совсем, потому что как минимум она рассчитана на хорошее количество естественного солнечного света. Этот нюан сделал фотографию холодной и синевато-зеленой, что конечно можно поправить цветокоррекцией, но это не наш вариант. Фотографировать надо не с надеждой на дальнейшую обработку, а с надеждой на минимальные коррекции кадра.</p>
+							<p>Темный автомобиль и мрачная погода - идеальное сочетание для хорошего кадра. Всё могло бы быть хорошо, если не один просчёт, который допускают начинающие фотографы, или я, который просто поспешил и никак не поменял настройки фотоаппарата перед спуском затвора. Внимательные читатели уже заметили, что часть машины резкая, а часть вовсе нет. Всё это произошло только лишь потому что я открыл диафрагму на максимум ее диапазона,  чтобы получить больше света либо забыл поменять её после прошлого кадра. Но факт остаётся фактом, для этого я и пишу об этом, для разборов своих ошибок и достижений, и, чтобы показать Вам как делать надо, а как лучше не стоит.</p>
+							<p>Плёнка в данном случае использовалась Kodak Portra 160, которая не подходит под такие условия от слова совсем, потому что как минимум она рассчитана на хорошее количество естественного солнечного света. Этот нюанс сделал кадр холодным и синевато-зеленым, что конечно можно поправить цветокоррекцией, но это не наш вариант. Фотографировать надо не с надеждой на дальнейшую обработку, а с надеждой на минимальные коррекции кадра.</p>
 							<h2 class="mb-3 mt-5 font-weight-bold">Look и Fomapan</h2>
-							<p>Если у фотографа спросить совет какую плёнку стоит первым делом попробовать для фотографии, он скажет: "чёрно-белую". А если уточнить какую чёрно-белую, ответ будет: "Fomapan".</p>
+							<p>Если у фотографа спросить совет какую плёнку стоит первым делом попробовать для фотографии, он скажет: "чёрно-белую". А если уточнить какую чёрно-белую, последует ответ: "Fomapan".</p>
 							<p>
 								<img src="images/blog_3.jpg" alt="" class="img-fluid">
 							</p>
-							<p>Черно-белая плёнка с одной стороны может простить некоторые огрехи фотографа, такие как цветные блики, простота цветокоррекции. Однако несмотря на это имеет меньшую популярность чем цветная негативная. Благодаря меньшей популярности среди фотографов стоимость этой плёнки как правило на порядок ниже, чем стоимоть цветной плёнки.</p>
-							<p>Давайте теперь разберем полученный кадр.</p>
+							<p>Черно-белая с одной стороны может простить некоторые огрехи фотографа, такие как цветные блики, простота цветокоррекции. Однако несмотря на это имеет меньшую популярность чем цветная негативная. Благодаря меньшей популярности среди фотографов стоимость этой плёнки как правило на порядок ниже, чем стоимость цветной плёнки.</p>
+							<p>Разберем полученный кадр.</p>
 							<p>Фотография отлично проэкспонирована, имеет хорошую резкость и контрастность. Всё это благодаря сканированию в высоком разрешении и последующей коррекцией цвета.</p>
-							<p>Локация подобрана удачно, погода солнечная, значит света, которого будет достаточно для кадра, хватает. Немаловажную роль сыграл клиент, который смог органично встать в кадре со своим велосипедом и не постеснялся сфотографироваться, хоть это и не было запланировано.</p>
+							<p>Локация подобрана удачно, погода солнечная, значит освещение в достатке. Немаловажную роль сыграл клиент, который смог органично встать в кадре со своим велосипедом и не постеснялся сфотографироваться, хоть это было не запланировано.</p>
 							<div class="about-author d-flex p-4 bg-light">
 								<div class="bio mr-5">
 									<img src="images/author.jpg" alt="Image placeholder" class="img-fluid mb-4 blog-photo" id="blog-photo">
 								</div>
 								<div class="desc">
 									<h3>Олег Пазний</h3>
-									<p>Я очень рекоммендую каждому начинающему фотографу, который знает базу устройства фотографирования заняться плёночной фотографией. Это поможет применить знания не только в теории, но и на практике.</p>
+									<p>Я очень рекомендую каждому начинающему фотографу, который знает базу устройства фотографирования заняться плёночной фотографией. Это поможет применить знания не только в теории, но и на практике.</p>
 								</div>
 							</div>
 						</div> <!-- .col-md-8 -->
