--- a/blog.html
+++ b/blog.html
@@ -84,144 +84,54 @@
 							<div class="row">
 								<div class="col-md-12">
 									<div class="blog-entry ftco-animate d-md-flex">
-										<a href="single.html" class="img img-2"
-											style="background-image: url(images/image_1.jpg);"></a>
+										<a href="article_1.html" class="img img-2"
+											style="background-image: url(images/blog_stock_1.jpg);"></a>
 										<div class="text text-2 p-4">
-											<h3 class="mb-2"><a href="single.html">Audi RS e-tron GT</a></h3>
+											<h3 class="mb-2"><a href="article_1.html">Примеры плёночных фотографий</a></h3>
 											<div class="meta-wrap">
 												<p class="meta">
 													<span>26 марта, 2023</span>
-													<span><a href="single.html">Автомобили</a></span>
+													<span><a href="article_1.html">Советы, практика</a></span>
 												</p>
 											</div>
-											<p class="mb-4">Коммерческая фото и видеосъемка для дилера Audi в Беларуси.</p>
-											<p><a href="#" class="btn-custom">Смотреть <span
+											<p class="mb-4">Разбор типичных ошибок и фишек плёночных фото.</p>
+											<p><a href="article_1.html" class="btn-custom">Смотреть <span
 														class="ion-ios-arrow-forward"></span></a></p>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="blog-entry ftco-animate d-md-flex">
-										<a href="single.html" class="img img-2"
-											style="background-image: url(images/image_2.jpg);"></a>
+										<a href="article_2.html" class="img img-2"
+											style="background-image: url(images/blog_stock_2.jpg);"></a>
 										<div class="text text-2 p-4">
-											<h3 class="mb-2"><a href="single.html">Opel Vectra C</a></h3>
+											<h3 class="mb-2"><a href="article_2.html">Из аналога в цифру</a></h3>
 											<div class="meta-wrap">
 												<p class="meta">
 													<span>07 мая, 2023</span>
-													<span><a href="single.html">Автомобили</a></span>
+													<span><a href="article_2.html">Советы, практика</a></span>
 												</p>
 											</div>
-											<p class="mb-4">Съемка Opel Vectra ходом. Мы нашли заброшенный участок дороги и сняли фото на Зенит ходом! Переходите и смотрите что из этого получилось!</p>
-											<p><a href="#" class="btn-custom">Смотреть <span
+											<p class="mb-4">Разберем что делать с Вашими аналоговыми исходниками и как посмотреть их на телефоне.</p>
+											<p><a href="article_2" class="btn-custom">Смотреть <span
 														class="ion-ios-arrow-forward"></span></a></p>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="blog-entry ftco-animate d-md-flex">
-										<a href="single.html" class="img img-2"
-											style="background-image: url(images/image_3.jpg);"></a>
+										<a href="article_3.html" class="img img-2"
+											style="background-image: url(images/blog_stock_3.png);"></a>
 										<div class="text text-2 p-4">
-											<h3 class="mb-2"><a href="single.html">Карбоновый Oduwan</a></h3>
+											<h3 class="mb-2"><a href="article_3.html">Ретуширование изображений</a></h3>
 											<div class="meta-wrap">
 												<p class="meta">
 													<span>23 сентября, 2023</span>
-													<span><a href="single.html">Велосипеды</a></span>
+													<span><a href="article_3.html">Советы, практика</a></span>
 												</p>
 											</div>
-											<p class="mb-4">Коммерческая съемка для белорусского конструктора велосипедных рам из карбона из стали.</p>
-											<p><a href="#" class="btn-custom">Смотреть <span
-														class="ion-ios-arrow-forward"></span></a></p>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-12">
-									<div class="blog-entry ftco-animate d-md-flex">
-										<a href="single.html" class="img img-2"
-											style="background-image: url(images/image_4.jpg);"></a>
-										<div class="text text-2 p-4">
-											<h3 class="mb-2"><a href="single.html">Opel Vectra C</a></h3>
-											<div class="meta-wrap">
-												<p class="meta">
-													<span>07 мая, 2023</span>
-													<span><a href="single.html">Автомобили</a></span>
-												</p>
-											</div>
-											<p class="mb-4">Съемка Opel Vectra на цифровую беззеркальную камеру ходом. Съемка таким способом позволяет получить красивые и реалистичные ракурсы в конечном счете!</p>
-											<p><a href="#" class="btn-custom">Смотреть <span
-														class="ion-ios-arrow-forward"></span></a></p>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-12">
-									<div class="blog-entry ftco-animate d-md-flex">
-										<a href="single.html" class="img img-2"
-											style="background-image: url(images/image_5.jpg);"></a>
-										<div class="text text-2 p-4">
-											<h3 class="mb-2"><a href="single.html">Seat Toledo VR6</a></h3>
-											<div class="meta-wrap">
-												<p class="meta">
-													<span>04 августа, 2023</span>
-													<span><a href="single.html">Автомобили</a></span>
-												</p>
-											</div>
-											<p class="mb-4">Спортивный стенс-проект из Бреста заблудился под мостом и попал в объектив моей камеры.</p>
-											<p><a href="#" class="btn-custom">Смотреть <span
-														class="ion-ios-arrow-forward"></span></a></p>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-12">
-									<div class="blog-entry ftco-animate d-md-flex">
-										<a href="single.html" class="img img-2"
-											style="background-image: url(images/image_6.jpg);"></a>
-										<div class="text text-2 p-4">
-											<h3 class="mb-2"><a href="single.html">Look 464</a></h3>
-											<div class="meta-wrap">
-												<p class="meta">
-													<span>12 июля, 2023</span>
-													<span><a href="single.html">Велосипеды</a></span>
-												</p>
-											</div>
-											<p class="mb-4">Съемка трекового велосипеда для Владилава из Бреста.</p>
-											<p><a href="#" class="btn-custom">Смотреть <span
-														class="ion-ios-arrow-forward"></span></a></p>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-12">
-									<div class="blog-entry ftco-animate d-md-flex">
-										<a href="single.html" class="img img-2"
-											style="background-image: url(images/image_7.jpg);"></a>
-										<div class="text text-2 p-4">
-											<h3 class="mb-2"><a href="single.html">Opel Vectra OPC</a></h3>
-											<div class="meta-wrap">
-												<p class="meta">
-													<span>10 июня, 2023</span>
-													<span><a href="single.html">Автомобили</a></span>
-												</p>
-											</div>
-											<p class="mb-4">Opel Vectra C на интересной локации, а именно закрытый стадион трактор, колонны которого придают сильную динамику фотографиям.</p>
-											<p><a href="#" class="btn-custom">Смотреть <span
-														class="ion-ios-arrow-forward"></span></a></p>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-12">
-									<div class="blog-entry ftco-animate d-md-flex">
-										<a href="single.html" class="img img-2"
-											style="background-image: url(images/image_8.jpg);"></a>
-										<div class="text text-2 p-4">
-											<h3 class="mb-2"><a href="single.html">ГАЗ-21</a></h3>
-											<div class="meta-wrap">
-												<p class="meta">
-													<span>25 августа, 2020</span>
-													<span><a href="single.html">Автомобили</a></span>
-												</p>
-											</div>
-											<p class="mb-4">Легенда отечественного автомобилестроения в объективе моего фотоаппарата!</p>
-											<p><a href="#" class="btn-custom">Смотреть <span
+											<p class="mb-4">Ретуширование изображений на примере Opel Vectra.</p>
+											<p><a href="article_3.html" class="btn-custom">Смотреть <span
 														class="ion-ios-arrow-forward"></span></a></p>
 										</div>
 									</div>
