правка изображений и тегов

--- a/collection.html
+++ b/collection.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<title>Галерея</title>
@@ -223,20 +223,28 @@
 					<div class="row mb-5">
 						<div class="col-md">
 							<div class="ftco-footer-widget mb-4 ml-md-4">
-								<h2 class="ftco-heading-2">Последние фотографии</h2>
+								<h2 class="ftco-heading-2">Последние фото</h2>
 								<ul class="list-unstyled photo">
-									<li><a href="#" class="img" style="background-image: url(images/image_1.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_2.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_3.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_4.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_5.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_6.jpg);"></a>
-									</li>
+									<div class="container">
+										<div class="row no-gutters">
+											<li><div class="footer-img"><img src="images/image_1.jpg"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/image_2.jpg"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/image_3.jpg"></div>
+											</li>
+										</div>
+										<div class="row no-gutters">
+											<li><div class="footer-img"><img src="images/image_4.jpg"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/image_5.jpg"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/image_6.jpg"></div>
+											</li>
+										</div>
+										
+									</div>
+									
 								</ul>
 							</div>
 						</div>
