--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<title>Блог</title>
@@ -137,21 +137,6 @@
 									</div>
 								</div>
 							</div><!-- END-->
-							<!-- <div class="row">
-								<div class="col">
-									<div class="block-27">
-										<ul>
-											<li><a href="#">&lt;</a></li>
-											<li class="active"><span>1</span></li>
-											<li><a href="#">2</a></li>
-											<li><a href="#">3</a></li>
-											<li><a href="#">4</a></li>
-											<li><a href="#">5</a></li>
-											<li><a href="#">&gt;</a></li>
-										</ul>
-									</div>
-								</div>
-							</div> -->
 						</div>
 						<!-- END COL -->
 					</div>
@@ -164,18 +149,25 @@
 							<div class="ftco-footer-widget mb-4 ml-md-4">
 								<h2 class="ftco-heading-2">Последние фото</h2>
 								<ul class="list-unstyled photo">
-									<li><a href="#" class="img" style="background-image: url(images/image_1.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_2.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_3.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_4.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_5.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_6.jpg);"></a>
-									</li>
+									<div class="container">
+										<div class="row no-gutters">
+											<li><div class="footer-img"><img src="images/image_1.jpg"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/image_2.jpg"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/image_3.jpg"></div>
+											</li>
+										</div>
+										<div class="row no-gutters">
+											<li><div class="footer-img"><img src="images/image_4.jpg"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/image_5.jpg"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/image_6.jpg"></div>
+											</li>
+										</div>
+										
+									</div>
 								</ul>
 							</div>
 						</div>
