--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<title>Фотограф Минск</title>
@@ -68,12 +68,12 @@
 					<div class="d-flex align-items-center js-fullheight">
 						<div class="author-image text img d-flex">
 							<section class="home-slider js-fullheight owl-carousel">
-								<div class="slider-item js-fullheight"
-									style="background-image: url(images/author.jpg);">
+								<div class="slider-item js-fullheight">
+									<img src="images/author.jpg">
 								</div>
 
-								<div class="slider-item js-fullheight"
-									style="background-image:url(images/author-2.jpg);">
+								<div class="slider-item js-fullheight">
+									<img src="images/author-2.jpg">
 								</div>
 							</section>
 						</div>
@@ -126,41 +126,41 @@
 						</div>
 					</div>
 					<div class="row no-gutters">
-						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/image_1.jpg" class="insta-img image-popup"
-								style="background-image: url(images/image_1.jpg);">
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/image_1.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/image_1.jpg">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
 							</a>
 						</div>
-						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/image_2.jpg" class="insta-img image-popup"
-								style="background-image: url(images/image_2.jpg);">
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/image_2.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/image_2.jpg">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
 							</a>
 						</div>
-						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/image_3.jpg" class="insta-img image-popup"
-								style="background-image: url(images/image_3.jpg);">
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/image_3.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/image_3.jpg">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
 							</a>
 						</div>
-						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/image_4.jpg" class="insta-img image-popup"
-								style="background-image: url(images/image_4.jpg);">
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/image_4.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/image_4.jpg">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
 							</a>
 						</div>
-						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/image_5.jpg" class="insta-img image-popup"
-								style="background-image: url(images/image_5.jpg);">
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/image_5.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/image_5.jpg">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
@@ -176,18 +176,26 @@
 							<div class="ftco-footer-widget mb-4 ml-md-4">
 								<h2 class="ftco-heading-2">Последние фото</h2>
 								<ul class="list-unstyled photo">
-									<li><a href="#" class="img" style="background-image: url(images/image_1.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_2.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_3.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_4.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_5.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_6.jpg);"></a>
-									</li>
+									<div class="container">
+										<div class="row no-gutters">
+											<li><div class="footer-img"><img src="images/image_1.jpg"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/image_2.jpg"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/image_3.jpg"></div>
+											</li>
+										</div>
+										<div class="row no-gutters">
+											<li><div class="footer-img"><img src="images/image_4.jpg"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/image_5.jpg"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/image_6.jpg"></div>
+											</li>
+										</div>
+										
+									</div>
+									
 								</ul>
 							</div>
 						</div>
