прописаны ключевые слова и описания

--- a/article_1.html
+++ b/article_1.html
@@ -2,9 +2,12 @@
 <html lang="ru">
 
 <head>
-	<title>Статья</title>
+	<title>Разбор плёночных снимков</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="description" content="Разбор частых ошибок при фотографировании на плёнку. Посмотрим ошибки на примере моих снимков.">
+	<meta name="keywords" content="кадров, пленка, фотографий">
+
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
@@ -88,7 +91,7 @@
 							<p>В данном случае была использована плёнка Kodak ColorPlus 200, которая одновременно имеет и хорошее ненадоедливое зерно, и достаточную для таких условий светочувствительность. Тут удалось "убить двух зайцев", а именно хорошо проэкспонировать кадр без лишних шумов.</p>
 							<p>К данной плёнке мы ещё вернёмся, так как она является моим фаворитом среди всего цветного негатива.</p>
 							<h2 class="mb-3 mt-5 font-weight-bold">BMW 3 и Portra</h2>
-							<p>Эта фотография сделана в неблагоприятных условиях: легкий туман, мало света. Как и в прошлом случае, это сыграло только на руку</p>
+							<p>Эта фотография сделана в неблагоприятных условиях: легкий туман, мало света. Как и в прошлом случае, это сыграло только на руку.</p>
 							<p>
 								<img src="images/blog_2.jpg" alt="" class="img-fluid">
 							</p>
