--- a/article_2.html
+++ b/article_2.html
@@ -2,9 +2,11 @@
 <html lang="ru">
 
 <head>
-	<title>Статья</title>
+	<title>Способы оцифровки плёнки и кассет</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="description" content="Узнайте как и где можно оцифровывать пленку и кассеты в Минске. Как оцифровать кассету в домашних условиях.">
+	<meta name="keywords" content="пленки, кассетами, проявке">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
