--- a/collection.html
+++ b/collection.html
@@ -2,9 +2,11 @@
 <html lang="ru">
 
 <head>
-	<title>Галерея</title>
+	<title>Галерея фотографа</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="description" content="Посмотрите на мои работы! Я фотографирую машины, велосипеды на плёнку и беззеркальную камеру.">
+	<meta name="keywords" content="автомобили, важную, процессе">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
