--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,11 @@
 <html lang="ru">
 
 <head>
-	<title>Контакты</title>
+	<title>Контакты фотографа Минск</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="description" content="Для связи с фотографом в Минске используйте эти контакты!">
+	<meta name="keywords" content="контакты, фотограф, адрес">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
