--- a/services.html
+++ b/services.html
@@ -2,9 +2,12 @@
 <html lang="ru">
 
 <head>
-	<title>Мои услуги</title>
+	<title>Услуги фотографа Минск</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="description" content="Услуги фотографа в Минске. Список услуг, преимущества фотографа, просмотр портфолио.">
+	<meta name="keywords" content="съемке, имею, клиента">
+
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
