--- a/about.html
+++ b/about.html
@@ -2,9 +2,12 @@
 <html lang="ru">
 
 <head>
-	<title>Кто я?</title>
+	<title>Кто такой Олег Пазний?</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="description" content="Узнайте мою историю становления фотографом, какой путь я прошел, чтобы быть готовым предоставлять свои услуги обществу.">
+	<meta name="keywords" content="камеру, начал, плёночной">
+
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
