--- a/article_3.html
+++ b/article_3.html
@@ -2,9 +2,12 @@
 <html lang="ru">
 
 <head>
-	<title>Статья</title>
+	<title>Ретуширование фотографий на примерах</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="description" content="Прочитайте статью на тему ретуширования фотографий. Научитесь ретушировать фотографии в Adobe Photoshop сами!">
+	<meta name="keywords" content="ретуширование, инструмент, пластырь">
+
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
