--- a/blog.html
+++ b/blog.html
@@ -2,9 +2,12 @@
 <html lang="ru">
 
 <head>
-	<title>Блог</title>
+	<title>Блог Олега Пазнего</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="description" content="Читайте интересующие Вас статьи на тему фотографирования и обработки фотографий. Я расскажу много нового для Вас!">
+	<meta name="keywords" content="изображений, портретов, создания">
+
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
