--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="ru">
 
 <head>
-	<title>Фотограф Минск</title>
+	<title>Фотограф в Минске</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="description" content="Привет, я фотограф из Минска. Переходи на мою страницу чтобы посмотреть на мои работы и узнать больше про меня!">
+	<meta name="keywords" content="фотографии, моменты, атмосферу">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
