--- a/article_1.html
+++ b/article_1.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="Разбор частых ошибок при фотографировании на плёнку. Посмотрим ошибки на примере моих снимков.">
 	<meta name="keywords" content="кадров, пленка, фотографий">
 
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
