--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="Читайте интересующие Вас статьи на тему фотографирования и обработки фотографий. Я расскажу много нового для Вас!">
 	<meta name="keywords" content="изображений, портретов, создания">
 
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
