--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="Узнайте мою историю становления фотографом, какой путь я прошел, чтобы быть готовым предоставлять свои услуги обществу.">
 	<meta name="keywords" content="камеру, начал, плёночной">
 
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
