--- a/article_2.html
+++ b/article_2.html
@@ -8,6 +8,8 @@
 	<meta name="description" content="Узнайте как и где можно оцифровывать пленку и кассеты в Минске. Как оцифровать кассету в домашних условиях.">
 	<meta name="keywords" content="пленки, кассетами, проявке">
 
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Herr+Von+Muellerhoff" rel="stylesheet">
