--- a/article_3.html
+++ b/article_3.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="Прочитайте статью на тему ретуширования фотографий. Научитесь ретушировать фотографии в Adobe Photoshop сами!">
 	<meta name="keywords" content="ретуширование, инструмент, пластырь">
 
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
