--- a/collection.html
+++ b/collection.html
@@ -8,6 +8,8 @@
 	<meta name="description" content="Посмотрите на мои работы! Я фотографирую машины, велосипеды на плёнку и беззеркальную камеру.">
 	<meta name="keywords" content="автомобили, важную, процессе">
 
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Herr+Von+Muellerhoff" rel="stylesheet">
