--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
 	<meta name="description" content="Для связи с фотографом в Минске используйте эти контакты!">
 	<meta name="keywords" content="контакты, фотограф, адрес">
 
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Herr+Von+Muellerhoff" rel="stylesheet">
