--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta name="description" content="Привет, я фотограф из Минска. Переходи на мою страницу чтобы посмотреть на мои работы и узнать больше про меня!">
 	<meta name="keywords" content="фотографии, моменты, атмосферу">
 
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Herr+Von+Muellerhoff" rel="stylesheet">
