--- a/blog.html
+++ b/blog.html
@@ -89,7 +89,7 @@
 								<div class="col-md-12">
 									<div class="blog-entry ftco-animate d-md-flex">
 										<a href="article_1.html" class="img img-2"
-											style="background-image: url(images/blog_stock_1.jpg);"></a>
+											style="background-image: url(images/blog_1.jpg);"></a>
 										<div class="text text-2 p-4">
 											<h3 class="mb-2"><a href="article_1.html">Примеры плёночных фотографий</a></h3>
 											<div class="meta-wrap">
@@ -125,7 +125,7 @@
 								<div class="col-md-12">
 									<div class="blog-entry ftco-animate d-md-flex">
 										<a href="article_3.html" class="img img-2"
-											style="background-image: url(images/blog_stock_3.png);"></a>
+											style="background-image: url(images/blog_stock_3.jpg);"></a>
 										<div class="text text-2 p-4">
 											<h3 class="mb-2"><a href="article_3.html">Ретуширование изображений</a></h3>
 											<div class="meta-wrap">
