--- a/about.html
+++ b/about.html
@@ -179,40 +179,40 @@
 					</div>
 					<div class="row no-gutters">
 						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/image_1.jpg" class="insta-img image-popup"
-								style="background-image: url(images/image_1.jpg);">
+							<a href="images/reklama-audi-rs-etron.jpg" class="insta-img image-popup"
+								style="background-image: url(images/reklama-audi-rs-etron.jpg);">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
 							</a>
 						</div>
 						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/image_2.jpg" class="insta-img image-popup"
-								style="background-image: url(images/image_2.jpg);">
+							<a href="images/dve-mashiny-stoyat-na-zakate.jpg" class="insta-img image-popup"
+								style="background-image: url(images/dve-mashiny-stoyat-na-zakate.jpg);">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
 							</a>
 						</div>
 						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/image_3.jpg" class="insta-img image-popup"
-								style="background-image: url(images/image_3.jpg);">
+							<a href="images/karbonovyj-velosiped-na-doroge.jpg" class="insta-img image-popup"
+								style="background-image: url(images/karbonovyj-velosiped-na-doroge.jpg);">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
 							</a>
 						</div>
 						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/image_4.jpg" class="insta-img image-popup"
-								style="background-image: url(images/image_4.jpg);">
+							<a href="images/seryj-avtomobil-edet-v-zakate.jpg" class="insta-img image-popup"
+								style="background-image: url(images/seryj-avtomobil-edet-v-zakate.jpg);">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
 							</a>
 						</div>
 						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/image_5.jpg" class="insta-img image-popup"
-								style="background-image: url(images/image_5.jpg);">
+							<a href="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" class="insta-img image-popup"
+								style="background-image: url(images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg);">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
@@ -230,19 +230,19 @@
 								<ul class="list-unstyled photo">
 									<div class="container">
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/image_1.jpg"></div>
+											<li><div class="footer-img"><img src="images/reklama-audi-rs-etron.jpg" alt="Фотосесия Audi RS e-tron GT"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_2.jpg"></div>
+											<li><div class="footer-img"><img src="images/dve-mashiny-stoyat-na-zakate.jpg" alt="Плёночное фото Opel Vectra"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_3.jpg"></div>
+											<li><div class="footer-img"><img src="images/karbonovyj-velosiped-na-doroge.jpg" alt="Фото карбонового велосипеда Oduwan"></div>
 											</li>
 										</div>
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/image_4.jpg"></div>
+											<li><div class="footer-img"><img src="images/seryj-avtomobil-edet-v-zakate.jpg" ></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_5.jpg"></div>
+											<li><div class="footer-img"><img src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_6.jpg"></div>
+											<li><div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg"></div>
 											</li>
 										</div>
 										
